@@ -1,4 +1,4 @@
-/* RCSid $Id: bsdf_m.h,v 3.6 2013/04/21 22:58:40 greg Exp $ */
+/* RCSid $Id: bsdf_m.h,v 3.7 2015/04/02 16:40:32 greg Exp $ */
 /*
  *  bsdf_m.h
  *  
@@ -33,6 +33,7 @@ typedef struct {
 	b_vecf		*ob_vec;	/* get output vector from index */
 	b_ndxf		*ob_ndx;	/* get output index from vector */
 	b_ohmf		*ob_ohm;	/* get output proj. SA for index */
+	C_CHROMA	*chroma;	/* chromaticity data */
 	float		bsdf[1];	/* scattering data (extends struct) */
 } SDMat;
 
@@ -82,6 +83,12 @@ typedef struct {
 extern ANGLE_BASIS	abase_list[MAXABASES];
 
 extern int		nabases;	/* current number of defined bases */
+
+extern C_COLOR	mtx_RGB_prim[3];	/* matrix RGB primaries  */
+extern float	mtx_RGB_coef[3];	/* corresponding Y coefficients */
+
+/* Get color or grayscale value for BSDF in the given directions */
+extern int		mBSDF_color(float coef[], const SDMat *b, int i, int o);
 
 /* Get vector for this angle basis index (front exiting) */
 extern b_vecf		fo_getvec;
